--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,16 +35,7 @@
 		"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
 		"import/no-extraneous-dependencies": "off",
-		"import/extensions": [
-			"error",
-			"always",
-			{
-				"js": "never",
-				"jsx": "never",
-				"ts": "never",
-				"tsx": "never"
-			}
-		],
+		"import/extensions": "off",
 		"jest/no-disabled-tests": "warn",
 		"jest/no-focused-tests": "error",
 		"jest/no-identical-title": "error",
@@ -56,6 +47,8 @@
 		"react/no-array-index-key": "off",
 		"no-unused-vars": "off",
 		"no-shadow": "off",
-		"react/state-in-constructor": "off"
+		"react/state-in-constructor": "off",
+		"react/react-in-jsx-scope": "off"
 	}
+
 }
