--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^11.14.1",
+    "react-icons": "^5.5.0",
     "react-papaparse": "^3.18.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
