--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.28.2",
     "@react-google-maps/api": "^2.8.1",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.13",
     "graphql-typescript-definitions": "^2.1.5",
     "i18next": "^21.4.2",
     "js-file-download": "^0.4.12",
